# Hexly_Lessons_MDK.01.04

./: .gitignore  README.md  from_txt_to_ipynb.py  ipynb_to_txt.py  m1-2_hw.ipynb  m10_hw.ipynb  m3_hw.ipynb  m4_hw.ipynb  m5_6_hw.ipynb  m7_hw.ipynb  m8_hw.ipynb  pyproject.toml  req.txt  str.py  test.py
DataBase/: .env.example  main.py  pyproject.toml  test.py
DataBase/lec/: pydantic.ipynb  sqlalchemy_basic.ipynb  usage_database.ipynb
DataBase/migration/: env.py
DataBase/migration/versions/: 1db82b74c296_created_comment_model_for_post.py  20b038335e56_init_database.py  66960ba5b16b_created_comment_model_for_post.py  da5298ef2dba_added_user_id_in_profile.py
DataBase/models/: __init__.py  comment.py  enums.py  post.py  profile.py  user.py
DataBase/schemas/: profile.py  user.py
QATests/: .env.example  env_vars.ipynb  main.py  pyproject.toml
QATests/lec/: logger.ipynb  test_cases.ipynb
QATests/settings/: config.py  loggers.py  test.py
QATests/tests/: test_1.py  test_n1.py  test_n2.py  test_n3.py  test_n4.py  test_n5.py
lec/module_1/: dict.ipynb  digits.ipynb  list.ipynb  set.ipynb  string.ipynb  tuple.ipynb  vals.ipynb
lec/module_10/: bank.py  multi.py  multiprocessing.ipynb  test.py  threading.ipynb
lec/module_11/: modules_2_0.ipynb  virtual_environment.ipynb
lec/module_2/: cycle.ipynb  func.ipynb  if-elif-else.ipynb
lec/module_3/: area.ipynb  include_func.ipynb  recursion.ipynb
lec/module_4_modules_n_packages/: main.py  main_pack.py  test_module.py  (+1 more)
module_8/: try.py
module_9/: base.ipynb  decorators.ipynb  generator.ipynb  iterators.ipynb
(+17 files in other folders)
