[tool.poetry]
name = "hexly-01"
version = "0.1.0"
description = ""
authors = ["Until <kostyuchenko.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
tz = "^0.2.2"
matplotlib = "^3.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
