[tool.poetry]
name = "qatests"
version = "0.1.0"
description = ""
authors = ["Until <kostyuchenko.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytz = "^2025.2"
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
